[gd_scene load_steps=7 format=3 uid="uid://nws0dbyvm3h4"]

[ext_resource type="Texture2D" uid="uid://bx7ghaj1jhlq4" path="res://assets/terrain/volcano_rock_wall.png" id="1_5iw7d"]
[ext_resource type="Script" uid="uid://bma8q1hxcskns" path="res://assets/scripts/objects/rock_wall.gd" id="1_6vfwu"]
[ext_resource type="Script" uid="uid://cphusaq70x4jg" path="res://assets/scripts/obstacles.gd" id="3_jka7u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5iw7d"]
size = Vector2(114, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vfwu"]
size = Vector2(32, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bb6sx"]
size = Vector2(114, 128)

[node name="RockWall" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_6vfwu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5iw7d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_5iw7d")

[node name="RockTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.7999999999999998

[node name="RockDestroyer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RockDestroyer"]
position = Vector2(-48, 0)
shape = SubResource("RectangleShape2D_6vfwu")
debug_color = Color(0.9967492, 0, 0.18961081, 0.41960785)

[node name="HitArea" type="Area2D" parent="."]
z_index = 6
collision_layer = 8
collision_mask = 0
script = ExtResource("3_jka7u")
launch_mode = 1

[node name="Collision" type="CollisionShape2D" parent="HitArea"]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_bb6sx")
debug_color = Color(0.8680398, 0.0005390644, 0.8566467, 0.41960785)
